# octo-robot

./: CMakeLists.txt
cad/: robot_model.SLDPRT  shaft_coupler.scad  shaft_coupler.stl
cad/NewRobotFrame/: Assem1.SLDASM  Assem2.sldasm  framePrint2ButForRealsiesHopefuly.SLDPRT
cad/NewRobotFrame/caster-wheel-roue-libre-1.snapshot.1/: Caster Wheel d=20mm - A - Base-1 Rivet A-1.STL  Caster Wheel d=20mm - B - Chape-1 Chape-1.STL  Caster Wheel d=20mm - B - Chape-1 Rivet2 A-1.STL  Caster Wheel d=20mm - C - Galet-1.STL
cad/NewRobotFrame/caster-wheel-roue-libre-1.snapshot.1/Caster Wheel d=20mm/: A - Base.SLDASM  B - Chape.SLDASM  Base - Base-1-1.STL  Base - Base-1.STL  Base - Rivet A-1-1.STL  Base - Rivet A-1.STL  Base - Rivet B-1-1.STL  Base - Rivet B-1.STL  Base.SLDPRT  C - Galet.SLDPRT  Caster Wheel d=20mm - A - Base-1 Base-1-1.STL  Caster Wheel d=20mm - A - Base-1 Base-1.STL  Caster Wheel d=20mm - A - Base-1 Rivet A-1-1.STL  Caster Wheel d=20mm - A - Base-1 Rivet B-1-1.STL  Caster Wheel d=20mm - A - Base-1 Rivet B-1.STL  Caster Wheel d=20mm - B - Chape-1 Chape-1-1.STL  Caster Wheel d=20mm - B - Chape-1 Rivet2 A-1-1.STL  Caster Wheel d=20mm - B - Chape-1 Rivet2 B-1-1.STL  Caster Wheel d=20mm - B - Chape-1 Rivet2 B-1.STL  Caster Wheel d=20mm - C - Galet-1-1.STL  Caster Wheel d=20mm.IGS  Caster Wheel d=20mm.SLDASM  Chape.SLDPRT  Galet.SLDPRT  Rivet A.SLDPRT  Rivet B.SLDPRT  Rivet2 A.SLDPRT  Rivet2 B.SLDPRT
cad/rev_b/: tire.stl  wheel.scad  wheel.stl
docs/: checklist.txt  checklist.txt~  part_manifest.txt  prototype-idea.odp  usage_presentation.odp
example-code/2021/tutorial_1_hello_world/.wpilib/: wpilib_preferences.json
firmware/: action_interface.h  action_manager.cpp  action_manager.h  action_motor.cpp  action_motor.h  action_process_command.cpp  action_process_command.h  basic_types.h  command_base.h  command_datasend.cpp  command_datasend.h  command_encoder.cpp  command_encoder.h  command_motor.cpp  command_motor.h  command_parser.cpp  command_parser.h  command_process_input.cpp  command_process_input.h  command_scheduler.cpp  command_scheduler.h  command_sr04.cpp  command_sr04.h  command_wrangler.cpp  command_wrangler.h  data_mover.cpp  data_mover.h  debug_esp8266.cpp  hardware_esp8266.cpp  hardware_esp8266.h  hardware_interface.cpp  hardware_interface.h  hardware_types.h  histogram.h  main.cpp  net_esp8266.cpp  net_esp8266.h  net_interface.h  sample_sound.cpp  sample_sound.h  (+20 more)
firmware/copy/: debug_esp8266.cpp  time_esp8266hst.h
firmware/firmware_v1/: basic_types.h  command_datasend.cpp  command_parser.h  simple_ostream.h  time_manager.cpp  time_types.h  util_profile.h  wifi_secrets.h
firmware/firmware_v1_sim/: main.cpp
firmware/firmware_v2/: command_base.h  command_datasend.cpp  command_datasend.h  command_encoder.cpp  command_encoder.h  command_gyro.cpp  command_gyro.h  command_motor.cpp  command_motor.h  command_parser.cpp  command_parser.h  command_process_input.cpp  command_process_input.h  command_sr04.h  debug_esp8266.cpp  hardware_esp8266.cpp  hardware_esp8266.h  hardware_interface.cpp  hardware_interface.h  hardware_types.h  main.cpp  net_esp8266.h  net_interface.h  simple_ostream.h  time_hst.h  util_ipinevents.h  wifi_debug_ostream.h  wifi_ostream.h
firmware/firmware_v2_sim/: main.cpp
firmware/unit_tests/: CMakeLists.txt  test_check_for_commands.cpp  test_device.cpp  test_enums.cpp  test_ipinevents.cpp  test_mock_debug.h  test_mock_event.h  test_mock_hardware.h  test_mock_net.h  test_pipe.cpp  test_profile.cpp
firmware_sim/: main.cpp
pcbs/eagle_libraries/: glowmouse_custom.lbr
pcbs/rev_a/: eagle.epf  main.brd  main.pro  main.sch
pcbs/rev_a/outputs/: copper_bottom.gbr  copper_top.gbr  drills.xln  gerber_job.gbrjob  profile.gbr  silkscreen_bottom.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr  solderpaste_bottom.gbr  solderpaste_top.gbr
pcbs/rev_b/: eagle.epf  main.brd  main.pro  main.sch
pcbs/rev_b/outputs/CAMOutputs/Assembly/: main.txt
pcbs/rev_b/outputs/CAMOutputs/DrillFiles/: drill_1_16.xln
pcbs/rev_b/outputs/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr
unit_tests/: CMakeLists.txt  test_check_for_commands.cpp  test_device.cpp  test_enums.cpp  test_histogram.cpp  test_ipinevents.cpp  test_mock_event.h  test_mock_hardware.h  test_mock_net.h  test_profile.cpp
(+54 files in other folders)
